add homes baths and little photos

--- a/app/content/content.jade
+++ b/app/content/content.jade
@@ -1,47 +1,45 @@
+.box
+.contentGallery
+  .contentAbout
+.listGallery
+  .premini
+    .mini
+    .mini
+    .mini
+    .mini
 #tabs
   ul
     li
       a(href="#tabs-main") главная
     li
-      a(href="#tabs-1") Дома
+      a(href="#tabs-homes") Дома
     li
-      a(href="#tabs-2") Бани
+      a(href="#tabs-baths") Бани
     li
       a(href="#tabs-gallery") Портфолио
     li
-      a(href="#tabs-3") Другое
+      a(href="#tabs-another") Другое
+    li.hideLi
+      a(href="#tabs-single") 3D
 
   #tabs-main
     .main
       h2 Дома для вас
       p Ищете классные и дешевые дома? Тогда мы идем к вам!
       img(src='content/img/home.jpg' height='350px' width='470px')
-  #tabs-1
-    .homes#home-1
-      h3 проект ева
-      span цена: 50 000 $
-    .homes#home-2
-    .homes#home-3
-    .homes#home-4
-    .homes#home-5
-    .homes#home-6
-  #tabs-2
-    .bath#bath-1
-    .bath#bath-2
-    .bath#bath-3
-    .bath#bath-4
-    .bath#bath-5
-    .bath#bath-6
-  #tabs-gallery
-    .photos
-    .photos
-    .photos
-    .photos
-    .photos
-    .photos
-  #tabs-3
+  #tabs-homes(data-bind = 'collection:$collection')
+  #tabs-baths(data-bind = 'collection:$collection')
+  #tabs-gallery(data-bind = 'collection:$collection')
+  #tabs-another
     ul
       li заборы
       li двери
       li окна
       li отделка
+  #tabs-single
+    img.singleImg(src='content/img/home-3d.png' height='460px' width='500px')
+    .singleGallery(data-id = '')
+      img.image(src='content/img/home-3d.png' height='150px' width='150px')
+      img.planeFirst(src='content/img/home-1p.png' height='150px' width='150px')
+      img.planeSecond(src='content/img/home-2p.png' height='150px' width='150px')
+    button.butClose close
