--- a/app/content/content.styl
+++ b/app/content/content.styl
@@ -3,7 +3,7 @@
   width 1000px
   border thin solid black
 
-.homes, .bath, .photos
+.homes, .baths, .photos
   height 210px
   width 200px
   margin-top 15px
@@ -30,20 +30,98 @@ body
 
 
 .ui-tabs .ui-tabs-nav li
-  margin-left 30px
+  margin-left 20px
 .ui-tabs .ui-tabs-nav .ui-tabs-anchor
   background-color rgba(116, 178, 226, 0.65)
   padding-right 40px
   padding-left 40px
-  
-#home-1
-  background url('img/dom-eva.jpg') 0px 0px no-repeat
-  background-size 200px 160px
 
-.homes h3
-  margin-left 35px
+
+.homes h3, .baths h3, .works h3
+  margin-left 55px
   margin-bottom 0px
-  margin-top 162px
+  margin-top 0px
  
-.homes span
-  margin-left 35px
+.homes span, .baths span
+  margin-left 55px
+
+
+// single item when open
+.hideLi
+  display none
+  
+.singleImg, .singleGallery
+  display inline-block
+  vertical-align top
+  
+.singleGallery
+  height 460px
+  width 160px
+  border thin solid black
+  
+.singleGallery .image, .singleGallery .planeFirst, .singleGallery .planeSecond
+  height 150px
+  width 150px
+  border thin solid black
+  
+
+// gallery
+.works
+  height 200px
+  width 200px
+  margin-top 15px
+  margin-left 84px
+  display inline-block
+  cursor pointer
+  vertical-align top
+  border thin solid black
+  &:hover
+    border thin solid red
+
+.box
+  height 100%
+  width 100%
+  opacity .8
+  background-color rgb(51, 51, 51)
+  position fixed
+  left 0
+  right 0
+  top 0
+  bottom 0
+  z-index 100
+  display none
+  
+.contentGallery
+  position fixed
+  margin 0 auto
+  max-height 100%
+  max-width 100%
+  border thin solid red
+  z-index 110
+  display none
+  background-color white
+  
+.listGallery
+  position fixed
+  bottom 0
+  left 0
+  height 100px
+  border thin solid red
+  z-index 110
+  display none
+  opacity .8
+  background-color rgb(51, 51, 51)
+  width 100%
+  margin 0 auto
+  
+.mini
+  height 90px
+  width 90px
+  border thin solid blue
+  display inline-block
+  
+.premini
+  height 100%
+  width 400px
+  margin 0 auto
+  border thin solid green
