--- a/app/content/content.jade
+++ b/app/content/content.jade
@@ -1,12 +1,16 @@
+.boxShadow
 .box
-.contentGallery
-  .contentAbout
+  .contentGallery
+    .contentImg
+      img(src='content/img/home.jpg')
+    .contentSpacer
 .listGallery
   .premini
     .mini
     .mini
     .mini
     .mini
+
 #tabs
   ul
     li
