--- a/app/content/content.styl
+++ b/app/content/content.styl
@@ -78,28 +78,49 @@ body
   &:hover
     border thin solid red
 
-.box
-  height 100%
-  width 100%
+
+.boxShadow
+  position fixed
   opacity .8
   background-color rgb(51, 51, 51)
+  height 100%
+  width 100%
+  top 0
+  left 0
+  z-index 100
+  display none
+
+.box
   position fixed
   left 0
   right 0
   top 0
   bottom 0
-  z-index 100
+  z-index 110
   display none
   
 .contentGallery
-  position fixed
-  margin 0 auto
-  max-height 100%
-  max-width 100%
+  position absolute
+  margin 30px 70px 102px
+  z-index 150
   border thin solid red
-  z-index 110
-  display none
+  top 0
+  left 0
+  
+.contentImg
+  position relative
+  max-width 100%
+  max-height 100%
   background-color white
+  border thin solid green
+  z-index 200
+  
+.contentSpacer
+  height 100px
+  position absolute
+  top 100%
+  left 0
+  width 1px
   
 .listGallery
   position fixed
